Update Fig 4 map + stats to also show percentage of supercold BTs over land/sea

--- a/Scripts/Fig4_MODIS_MAP.ipynb
+++ b/Scripts/Fig4_MODIS_MAP.ipynb
@@ -27,12 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
     "import cartopy.feature as cfeature\n",
+    "from global_land_mask import globe\n",
     "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
     "import matplotlib.cm as cm\n",
@@ -42,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['lat', 'lon', 'BT'], dtype='object')\n"
+      "Index(['lat', 'lon', 'BT', 'land'], dtype='object')\n"
      ]
     }
    ],
@@ -57,6 +58,8 @@
     "# First, load the data\n",
     "inf_ext = '../data/extre_frame.pkl'\n",
     "extre_frame = pd.read_pickle(inf_ext)\n",
+    "\n",
+    "extre_frame['land'] = globe.is_land(extre_frame['lat'], extre_frame['lon'])\n",
     "\n",
     "# Date should have a column for date, lat, lon and BT (in K)\n",
     "print(extre_frame.columns)\n",
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -399,10 +402,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEMP   | LAND   | SEA\n",
+      "_______|________|________________\n",
+      "BT<168 | 14.375 | 85.625\n",
+      "BT<173 | 23.595 | 76.405\n",
+      "BT<178 | 24.435 | 75.565\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the above stats as a percentage: % land, % sea\n",
+    "print(f\"TEMP   | LAND   | SEA\")\n",
+    "print(f\"_______|________|________________\")\n",
+    "\n",
+    "# Below 168.15K\n",
+    "tdata = extre_frame[extre_frame['BT']<168.15]\n",
+    "tdata.sort_values(by=['BT'])\n",
+    "n_land_168 = len(tdata[tdata['land']==True])\n",
+    "n_sea_168 = len(tdata[tdata['land']==False])\n",
+    "n_tot_168 = n_land_168 + n_sea_168\n",
+    "\n",
+    "# Below 173.15K\n",
+    "tdata = extre_frame[extre_frame['BT']<173.15]\n",
+    "tdata.sort_values(by=['BT'])\n",
+    "n_land_173 = len(tdata[tdata['land']==True])\n",
+    "n_sea_173 = len(tdata[tdata['land']==False])\n",
+    "n_tot_173 = n_land_173 + n_sea_173\n",
+    "\n",
+    "# Below 178.15K\n",
+    "tdata = extre_frame[extre_frame['BT']<178.15]\n",
+    "tdata.sort_values(by=['BT'])\n",
+    "n_land_178 = len(tdata[tdata['land']==True])\n",
+    "n_sea_178 = len(tdata[tdata['land']==False])\n",
+    "n_tot_178 = n_land_178 + n_sea_178\n",
+    "\n",
+    "print(f\"BT<168 | {n_land_168 / n_tot_168 *100:06.3f} | {n_sea_168 / n_tot_168 *100:06.3f}\")\n",
+    "print(f\"BT<173 | {n_land_173 / n_tot_173 *100:06.3f} | {n_sea_173 / n_tot_173 *100:06.3f}\")\n",
+    "print(f\"BT<178 | {n_land_178 / n_tot_178 *100:06.3f} | {n_sea_178 / n_tot_178 *100:06.3f}\")"
+   ]
   }
  ],
  "metadata": {
@@ -421,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
